--- a/JavaScript/07_while.html
+++ b/JavaScript/07_while.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS while문 연습</title>
-    <script src="./while.js"></script>
+    <script src="./07_while.js"></script>
 </head>
 
 <body>
